working on homepage layout

--- a/frontent/styles/globals.css
+++ b/frontent/styles/globals.css
@@ -2,15 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+    font-family: "Urbanist", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.12em;
+
+    color: rgba(0, 0, 0, 1);
+
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body {
-    font-family: "Urbanist", sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 28px;
 }
