--- a/frontent/styles/globals.css
+++ b/frontent/styles/globals.css
@@ -7,7 +7,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
-    letter-spacing: 0.12em;
+    letter-spacing: 1px;
 
     color: rgba(0, 0, 0, 1);
 
