backend work started

--- a/frontent/styles/globals.css
+++ b/frontent/styles/globals.css
@@ -98,3 +98,13 @@
     }
 }
 /* PRODUCT DETAILS CAROUSEL STYLING CUSTOMIZATION END */
+
+.markdown ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: disc;
+    margin: 20px 0;
+}
+.markdown ul li {
+    margin: 10px 0;
+}
